--- a/newticketsdatabase.html
+++ b/newticketsdatabase.html
@@ -137,14 +137,14 @@
        Highlight full ticket row if appealed
        ------------------------------------------------------------ */
     .appeal-highlight {
-      background-color: #FFFAE5; /* light yellow background */
+      background-color: #E84040; /* light yellow background */
     }
 
     /* ------------------------------------------------------------
        Highlight entire row if status = "Finalised"
        ------------------------------------------------------------ */
     .finalised-row {
-      background-color: #E8F5E9; /* very light green */
+      background-color: #A5FF7F; /* very light green */
     }
 
     /* ------------------------------------------------------------
