--- a/newticketsdatabase.html
+++ b/newticketsdatabase.html
@@ -927,6 +927,49 @@
               <input type="text" id="stewardTag-${ticketId}" 
                      placeholder="e.g. Steward – IOC" 
                      value="${ticketData.stewardTag || ""}" />
+<label for="futureAdvice-${ticketId}"><strong>Future Advice</strong></label>
+<select id="futureAdvice-${ticketId}">
+  <option value="" disabled ${!ticketData.futureAdvice ? "selected" : ""}>Select advice…</option>
+  <option value="Respectful Conduct: To avoid penalties for disrespectful behavior, maintain a neutral or positive tone in all communications—even under pressure. If you disagree with a steward’s decision, wait until the session ends before composing an appeal; keep it concise, factual, and free of emotional language to show professionalism and respect toward officials and fellow drivers." ${ticketData.futureAdvice === "Respectful Conduct: To avoid penalties for disrespectful behavior, maintain a neutral or positive tone in all communications—even under pressure. If you disagree with a steward’s decision, wait until the session ends before composing an appeal; keep it concise, factual, and free of emotional language to show professionalism and respect toward officials and fellow drivers." ? "selected" : ""}>
+    Respectful Conduct
+  </option>
+  <option value="Racing Decorum: Prevent contact-related penalties by practicing clean overtakes in test sessions: focus on lifting earlier and carrying momentum rather than late diving into braking zones. Remind yourself mid-race to leave at least one car-width whenever there’s any uncertainty, and consciously avoid maneuvers like punting, bump-passing, or brake-checking." ${ticketData.futureAdvice === "Racing Decorum: Prevent contact-related penalties by practicing clean overtakes in test sessions: focus on lifting earlier and carrying momentum rather than late diving into braking zones. Remind yourself mid-race to leave at least one car-width whenever there’s any uncertainty, and consciously avoid maneuvers like punting, bump-passing, or brake-checking." ? "selected" : ""}>
+    Racing Decorum
+  </option>
+  <option value="Passing Responsibilities: Ensure every passing attempt is fair by waiting for a fully clear gap before committing—if you’re not completely alongside before the turn-in point, back out and try again later. As the lead driver, avoid sudden line changes and be predictable in defense, giving overtakers a legitimate chance once they’ve shown clear intent." ${ticketData.futureAdvice === "Passing Responsibilities: Ensure every passing attempt is fair by waiting for a fully clear gap before committing—if you’re not completely alongside before the turn-in point, back out and try again later. As the lead driver, avoid sudden line changes and be predictable in defense, giving overtakers a legitimate chance once they’ve shown clear intent." ? "selected" : ""}>
+    Passing Responsibilities
+  </option>
+  <option value="Passing Lines: In practice, mark your ideal defensive line and commit to it at race time; once an overtaker’s front wheel is alongside your rear wheel, leave enough room for a car’s width between you. During braking, stay on your chosen line and brake smoothly—never veer across the overtaker’s path." ${ticketData.futureAdvice === "Passing Lines: In practice, mark your ideal defensive line and commit to it at race time; once an overtaker’s front wheel is alongside your rear wheel, leave enough room for a car’s width between you. During braking, stay on your chosen line and brake smoothly—never veer across the overtaker’s path." ? "selected" : ""}>
+    Passing Lines
+  </option>
+  <option value="Establishing Overlap: Only attempt a dive-bomb if you’ve already overlapped by at least half a car length at the turn-in marker; otherwise, exercise patience and wait for a safer opportunity. Always factor in tire wear and track conditions—if your tires are degraded, avoid forcing moves you can’t complete cleanly." ${ticketData.futureAdvice === "Establishing Overlap: Only attempt a dive-bomb if you’ve already overlapped by at least half a car length at the turn-in marker; otherwise, exercise patience and wait for a safer opportunity. Always factor in tire wear and track conditions—if your tires are degraded, avoid forcing moves you can’t complete cleanly." ? "selected" : ""}>
+    Establishing Overlap
+  </option>
+  <option value="Line Commitment: Decide on your defensive line before entering the braking zone and hold it without deviation. If an unexpected incident forces you to change, lift early and signal your intention to avoid surprising following drivers; once you’ve straightened up, re-commit to your new line only after the track is clear." ${ticketData.futureAdvice === "Line Commitment: Decide on your defensive line before entering the braking zone and hold it without deviation. If an unexpected incident forces you to change, lift early and signal your intention to avoid surprising following drivers; once you’ve straightened up, re-commit to your new line only after the track is clear." ? "selected" : ""}>
+    Line Commitment
+  </option>
+  <option value="Accident Predictability: If you spin or lose control, immediately floor and hold the brakes until you stop, keeping your car stationary and visible. Only rejoin when you can see at least two cars behind you have cleared the racing line safely; if in doubt, remain in the runoff area and wait for confirmation that it’s clear." ${ticketData.futureAdvice === "Accident Predictability: If you spin or lose control, immediately floor and hold the brakes until you stop, keeping your car stationary and visible. Only rejoin when you can see at least two cars behind you have cleared the racing line safely; if in doubt, remain in the runoff area and wait for confirmation that it’s clear." ? "selected" : ""}>
+    Accident Predictability
+  </option>
+  <option value="Rejoining the Track: After going off, reduce to approximately half pace and keep your brake lights on until you’re fully back under control and clear of the racing line. Meanwhile, drivers on-track should monitor mirrors for re-joiners and anticipate their lower speed, giving them additional space to merge safely." ${ticketData.futureAdvice === "Rejoining the Track: After going off, reduce to approximately half pace and keep your brake lights on until you’re fully back under control and clear of the racing line. Meanwhile, drivers on-track should monitor mirrors for re-joiners and anticipate their lower speed, giving them additional space to merge safely." ? "selected" : ""}>
+    Rejoining the Track
+  </option>
+  <option value="No Reverse Direction: Never reverse in the opposite direction on track; if you miss a turn, continue forward to the next escape route to turn around. Practice a quick “lift-and-spin” maneuver in non-critical areas so you can reorient your car facing forward without reversing." ${ticketData.futureAdvice === "No Reverse Direction: Never reverse in the opposite direction on track; if you miss a turn, continue forward to the next escape route to turn around. Practice a quick “lift-and-spin” maneuver in non-critical areas so you can reorient your car facing forward without reversing." ? "selected" : ""}>
+    No Reverse Direction
+  </option>
+  <option value="Allowing Overtakes: When lapped, pick a consistent yield point—ideally on a straight or at a corner exit—and move off the fast line to let leaders through. If you find yourself unlapping and you’re faster, only do so where you can cleanly pull ahead without defensive moves, then resume racing as usual." ${ticketData.futureAdvice === "Allowing Overtakes: When lapped, pick a consistent yield point—ideally on a straight or at a corner exit—and move off the fast line to let leaders through. If you find yourself unlapping and you’re faster, only do so where you can cleanly pull ahead without defensive moves, then resume racing as usual." ? "selected" : ""}>
+    Allowing Overtakes
+  </option>
+  <option value="Vehicle Modifications: Before each event, double-check your setup against the published Balance of Performance or approved configurations on IFWL.net. Save and load the event’s official setup cleanly on race day to ensure no unauthorized aero, tire, or engine tweaks slip in." ${ticketData.futureAdvice === "Vehicle Modifications: Before each event, double-check your setup against the published Balance of Performance or approved configurations on IFWL.net. Save and load the event’s official setup cleanly on race day to ensure no unauthorized aero, tire, or engine tweaks slip in." ? "selected" : ""}>
+    Vehicle Modifications
+  </option>
+  <option value="Event Participation: If you know you can’t attend a race you’ve registered for, unregister immediately to free up the spot. To avoid missing the cutoff, set a personal reminder at least one hour before the official “unregister by” deadline. If you have been subject to a ragequit penalty - please remember an \"off track\" or incident isn't the end of your race - race until the chequered flag." ${ticketData.futureAdvice === "Event Participation: If you know you can’t attend a race you’ve registered for, unregister immediately to free up the spot. To avoid missing the cutoff, set a personal reminder at least one hour before the official “unregister by” deadline. If you have been subject to a ragequit penalty - please remember an \"off track\" or incident isn't the end of your race - race until the chequered flag." ? "selected" : ""}>
+    Event Participation
+  </option>
+  <option value="Compliance: Keep bookmarked copies of the Forza, Assetto Corsa, and ACC Codes of Conduct, and quickly review key sections before each series begins. If you switch disciplines between events, revisit the developer’s official rules via the links on IFWL.net so you’re always up to date with any title-specific regulations." ${ticketData.futureAdvice === "Compliance: Keep bookmarked copies of the Forza, Assetto Corsa, and ACC Codes of Conduct, and quickly review key sections before each series begins. If you switch disciplines between events, revisit the developer’s official rules via the links on IFWL.net so you’re always up to date with any title-specific regulations." ? "selected" : ""}>
+    Compliance
+  </option>
+</select>
 
               <div style="margin-top: 8px;">
                 <button id="submitReview-${ticketId}">Update Ticket</button>
@@ -958,7 +1001,9 @@
         const decisionText    = decisionInput.value.trim();
         const stewardTagVal   = stewardTagInput.value.trim();
 
-        if (!decisionText) {
+        const futureAdviceSel = document.getElementById(`futureAdvice-${ticketId}`);
+        const futureAdviceVal = futureAdviceSel.value;
+if (!decisionText) {
           detailStatusDiv.textContent = "Please enter a steward decision.";
           detailStatusDiv.className = "status error";
           return;
@@ -977,7 +1022,8 @@
           await updateDoc(ticketRef, {
             status: newStatus,
             stewardDecision: decisionText,
-            stewardTag: stewardTagVal
+            stewardTag: stewardTagVal,
+            futureAdvice: futureAdviceVal
           });
           detailStatusDiv.textContent = "Ticket updated!";
           detailStatusDiv.className = "status success";
