--- a/newticketsdatabase.html
+++ b/newticketsdatabase.html
@@ -1435,7 +1435,15 @@ if (!decisionText) {
       doc.text(reasonLines, 45, y);
       y += reasonLines.length * 6 + 8;
 
-      // 15) Signature line: “The Stewards”
+      
+        // Future Advice: Steward’s recommended feedback
+        doc.setFont("helvetica", "bold");
+        doc.text("Future Advice:", 15, y);
+        doc.setFont("helvetica", "normal");
+        const adviceLines = doc.splitTextToSize(ticketData.futureAdvice || "—", 150);
+        doc.text(adviceLines, 45, y);
+        y += adviceLines.length * 6 + 4;
+// 15) Signature line: “The Stewards”
       doc.setFont("helvetica", "bold");
       doc.text("The Stewards", 15, y);
       y += 12;
