--- a/newticketsdatabase.html
+++ b/newticketsdatabase.html
@@ -511,8 +511,9 @@
     async function populateDriverDropdown() {
       const snapshot = await getDocs(collection(db, "drivers"));
       const names = [];
-      snapshot.forEach(docSnap => {
-        const data = docSnap.data();
+      snapshot.forEach(docSnap => {// Apply admin filters
+
+          const data    = docSnap.data();
         if (data.fullName && typeof data.fullName === "string") {
           names.push(data.fullName);
         }
