--- a/newticketsdatabase.html
+++ b/newticketsdatabase.html
@@ -222,7 +222,49 @@
     }
   </style>
   <!-- jsPDF UMD build for PDF generation -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js">
+  // Initialize admin filters and audit button
+  const compFilterEl    = document.getElementById("adminCompetitionFilter");
+  const showFinalisedEl = document.getElementById("adminShowFinalised");
+  const headAuditBtn    = document.getElementById("headStewardAudit");
+  compFilterEl.addEventListener("change", () => fetchAndRenderTickets(adminTicketsContainer, true));
+  showFinalisedEl.addEventListener("change", () => fetchAndRenderTickets(adminTicketsContainer, true));
+  headAuditBtn.addEventListener("click", generateAuditPDF);
+
+  // Generate Head Steward Audit PDF
+  async function generateAuditPDF() {
+    const ticketsCol = collection(db, "tickets");
+    const snapshot = await getDocs(query(ticketsCol));
+    const totalTickets = snapshot.size;
+    const completedDocs = snapshot.docs.filter(d => d.data().status === "Finalised" && d.data().finalisedAt);
+    const completed = completedDocs.length;
+    let avgTime = 0;
+    if (completed > 0) {
+      const sumMs = completedDocs.reduce((sum, d) => {
+        const data = d.data();
+        const submitted = data.timestamp.toDate();
+        const finalised = data.finalisedAt.toDate();
+        return sum + (finalised.getTime() - submitted.getTime());
+      }, 0);
+      avgTime = sumMs / completed;
+    }
+    const avgDays = Math.floor(avgTime / (1000 * 60 * 60 * 24));
+    const avgHours = Math.floor((avgTime % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+    const avgMinutes = Math.floor((avgTime % (1000 * 60 * 60)) / (1000 * 60));
+    const formattedAvg = `${avgDays}d ${avgHours}h ${avgMinutes}m`;
+
+    const { jsPDF } = window.jspdf;
+    const doc = new jsPDF();
+    doc.setFontSize(16);
+    doc.text("Head Steward Audit Report", 10, 20);
+    doc.setFontSize(12);
+    doc.text(`Total tickets: ${totalTickets}`, 10, 40);
+    doc.text(`Total tickets completed: ${completed}`, 10, 50);
+    doc.text(`Average time to finalize: ${formattedAvg}`, 10, 60);
+    doc.save("head-steward-audit.pdf");
+  }
+</script>
+
 </head>
 <body>
   <header>
@@ -375,7 +417,7 @@
   <!-- ==============================================================
        SECTION 4: ADMIN DASHBOARD (PRIVATE, WITH DETAIL VIEW)
        ============================================================== -->
-  <div id="adminSection" class="container hidden">
+  <div id="adminSection"
   <!-- Admin Filters & Head Steward Audit -->
   <div class="form-group">
     <label for="adminCompetitionFilter">Filter by Competition</label>
@@ -401,7 +443,7 @@
   </div>
   <button id="headStewardAudit" class="btn">Head Steward Audit</button>
   <!-- End Admin Filters & Audit -->
-
+ class="container hidden">
     <h2 class="section-title">Admin Dashboard</h2>
     <div id="adminTicketsContainer">
       <!-- Admin table will be injected here -->
@@ -511,9 +553,8 @@
     async function populateDriverDropdown() {
       const snapshot = await getDocs(collection(db, "drivers"));
       const names = [];
-      snapshot.forEach(docSnap => {// Apply admin filters
-
-          const data    = docSnap.data();
+      snapshot.forEach(docSnap => {
+        const data = docSnap.data();
         if (data.fullName && typeof data.fullName === "string") {
           names.push(data.fullName);
         }
@@ -1055,18 +1096,8 @@ if (!decisionText) {
     // Highlight “Finalised” rows in green
     // ----------------------------------------------------------------
     async function fetchAndRenderTickets(targetContainer, isAdmin = false) {
-      // Admin filter elements
-      let compFilterEl, showFinalisedEl;
-      if (isAdmin) {
-        compFilterEl = document.getElementById("adminCompetitionFilter");
-        showFinalisedEl = document.getElementById("adminShowFinalised");
-      }
-
       const ticketsCol   = collection(db, "tickets");
-      const ticketsQuery = query(
-        ticketsCol,
-        orderBy("timestamp", "desc")
-      );
+      const ticketsQuery = query(ticketsCol, orderBy("timestamp","desc"));
 
       try {
         const snapshot = await getDocs(ticketsQuery);
@@ -1094,23 +1125,18 @@ if (!decisionText) {
         `;
 
         snapshot.forEach(docSnap => {
-          // Apply admin filters
+          const data    = docSnap.data();
+          const tsObj   = data.timestamp && data.timestamp.toDate ? data.timestamp.toDate() : null;
+          // Admin filters
           if (isAdmin) {
             const compFilter = compFilterEl.value;
-            const showOld = showFinalisedEl.checked;
-            if (compFilter && data.competition !== compFilter) {
-              return;
-            }
-            if (!showOld && data.status === "Finalised" && data.timestamp) {
-              const tsObj = data.timestamp.toDate();
-              if (Date.now() - tsObj.getTime() > 4 * 24 * 60 * 60 * 1000) {
-                return;
-              }
+            const showOld    = showFinalisedEl.checked;
+            if (compFilter && data.competition !== compFilter) return;
+            if (!showOld && data.status === "Finalised" && tsObj) {
+              if (Date.now() - tsObj.getTime() > 4*24*60*60*1000) return;
             }
           }
 
-          const data    = docSnap.data();
-          const tsObj   = data.timestamp && data.timestamp.toDate ? data.timestamp.toDate() : null;
           const tsStr   = tsObj ? tsObj.toLocaleString() : "";
           const id      = docSnap.id;
           const steward = data.stewardTag || "";
@@ -1521,44 +1547,6 @@ if (!decisionText) {
       // 18) Save PDF
       doc.save(`IFWL_StewardDecision_${ticketId}.pdf`);
     }
-  
-  // Initialize admin filters and Head Steward Audit button
-  document.getElementById("adminCompetitionFilter").addEventListener("change", () => fetchAndRenderTickets(adminTicketsContainer, true));
-  document.getElementById("adminShowFinalised").addEventListener("change", () => fetchAndRenderTickets(adminTicketsContainer, true));
-  document.getElementById("headStewardAudit").addEventListener("click", generateAuditPDF);
-
-  // Generate Head Steward Audit PDF
-  async function generateAuditPDF() {
-    const ticketsCol = collection(db, "tickets");
-    const snapshot = await getDocs(query(ticketsCol));
-    const totalTickets = snapshot.size;
-    const completedDocs = snapshot.docs.filter(d => d.data().status === "Finalised" && d.data().finalisedAt);
-    const completed = completedDocs.length;
-    let avgTime = 0;
-    if (completed > 0) {
-      const sumMs = completedDocs.reduce((sum, d) => {
-        const data = d.data();
-        const submitted = data.timestamp.toDate();
-        const finalised = data.finalisedAt.toDate();
-        return sum + (finalised.getTime() - submitted.getTime());
-      }, 0);
-      avgTime = sumMs / completed;
-    }
-    const avgDays = Math.floor(avgTime / (1000 * 60 * 60 * 24));
-    const avgHours = Math.floor((avgTime % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-    const avgMinutes = Math.floor((avgTime % (1000 * 60 * 60)) / (1000 * 60));
-    const formattedAvg = `${avgDays}d ${avgHours}h ${avgMinutes}m`;
-
-    const { jsPDF } = window.jspdf;
-    const doc = new jsPDF();
-    doc.setFontSize(16);
-    doc.text("Head Steward Audit Report", 10, 20);
-    doc.setFontSize(12);
-    doc.text(`Total tickets: ${totalTickets}`, 10, 40);
-    doc.text(`Total tickets completed: ${completed}`, 10, 50);
-    doc.text(`Average time to finalize: ${formattedAvg}`, 10, 60);
-    doc.save("head-steward-audit.pdf");
-  }
-</script>
+  </script>
 </body>
 </html>
