--- a/newticketsdatabase.html
+++ b/newticketsdatabase.html
@@ -411,9 +411,8 @@
   <!-- ==============================================================
        Firebase v9+ Modular SDK & App Logic (including PDF generation)
        ============================================================== -->
-  <script type="module">
-document.addEventListener('DOMContentLoaded', () => {
-// 1) Import required Firebase modules
+  <script type="module" defer>
+    // 1) Import required Firebase modules
     import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-app.js";
     import {
       getFirestore,
@@ -1506,7 +1505,6 @@ if (!decisionText) {
       // 18) Save PDF
       doc.save(`IFWL_StewardDecision_${ticketId}.pdf`);
     }
-});
-</script>
+  </script>
 </body>
 </html>
