--- a/newticketsdatabase.html
+++ b/newticketsdatabase.html
@@ -348,6 +348,10 @@
        SECTION 2: VIEW ALL TICKETS (PUBLIC, WITH INLINE APPEAL FORM)
        ============================================================== -->
   <div id="viewSection" class="container hidden">
+    <div class="form-group">
+      <input type="checkbox" id="showHistoricFinalisedPublic" />
+      <label for="showHistoricFinalisedPublic">Show historic finalised tickets (older than 3 days)</label>
+    </div>
     <h2 class="section-title">All Submitted Tickets</h2>
     <div id="ticketsListContainer">
       <!-- Public table + inline appeal form will be injected here -->
@@ -377,6 +381,10 @@
        SECTION 4: ADMIN DASHBOARD (PRIVATE, WITH DETAIL VIEW)
        ============================================================== -->
   <div id="adminSection" class="container hidden">
+    <div class="form-group">
+      <input type="checkbox" id="showHistoricFinalisedAdmin" />
+      <label for="showHistoricFinalisedAdmin">Show historic finalised tickets (older than 3 days)</label>
+    </div>
     <button id="headStewardAudit" class="btn">Head Steward Audit</button>
   <!-- End Admin Filters & Audit -->
  class="container hidden">
@@ -490,7 +498,14 @@
       const snapshot = await getDocs(collection(db, "drivers"));
       const names = [];
       snapshot.forEach(docSnap => {
-        const data = docSnap.data();
+        // Skip finalised older than 3 days
+          const data = docSnap.data();
+          const ts = data.timestamp && data.timestamp.toDate ? data.timestamp.toDate() : null;
+          if (data.status === 'Finalised' && ts) {
+            const ageMs = Date.now() - ts.getTime();
+            if (ageMs > 3*24*60*60*1000 && !showHistoric) return;
+          }
+const data = docSnap.data();
         if (data.fullName && typeof data.fullName === "string") {
           names.push(data.fullName);
         }
@@ -533,7 +548,14 @@
       const snapshot = await getDocs(collection(db, "drivers"));
       const names = [];
       snapshot.forEach(docSnap => {
-        const data = docSnap.data();
+        // Skip finalised older than 3 days
+          const data = docSnap.data();
+          const ts = data.timestamp && data.timestamp.toDate ? data.timestamp.toDate() : null;
+          if (data.status === 'Finalised' && ts) {
+            const ageMs = Date.now() - ts.getTime();
+            if (ageMs > 3*24*60*60*1000 && !showHistoric) return;
+          }
+const data = docSnap.data();
         if (data.fullName && typeof data.fullName === "string") {
           names.push(data.fullName);
         }
@@ -576,7 +598,14 @@
       const snapshot = await getDocs(collection(db, "tracks"));
       const names = [];
       snapshot.forEach(docSnap => {
-        const data = docSnap.data();
+        // Skip finalised older than 3 days
+          const data = docSnap.data();
+          const ts = data.timestamp && data.timestamp.toDate ? data.timestamp.toDate() : null;
+          if (data.status === 'Finalised' && ts) {
+            const ageMs = Date.now() - ts.getTime();
+            if (ageMs > 3*24*60*60*1000 && !showHistoric) return;
+          }
+const data = docSnap.data();
         if (data.name && typeof data.name === "string") {
           names.push(data.name);
         }
@@ -619,7 +648,14 @@
       const snapshot = await getDocs(collection(db, "regulations"));
       const names = [];
       snapshot.forEach(docSnap => {
-        const data = docSnap.data();
+        // Skip finalised older than 3 days
+          const data = docSnap.data();
+          const ts = data.timestamp && data.timestamp.toDate ? data.timestamp.toDate() : null;
+          if (data.status === 'Finalised' && ts) {
+            const ageMs = Date.now() - ts.getTime();
+            if (ageMs > 3*24*60*60*1000 && !showHistoric) return;
+          }
+const data = docSnap.data();
         if (data.name && typeof data.name === "string") {
           names.push(data.name);
         }
@@ -1032,7 +1068,12 @@ if (!decisionText) {
     // Highlight “Finalised” rows in green
     // ----------------------------------------------------------------
     async function fetchAndRenderTickets(targetContainer, isAdmin = false) {
-      const ticketsCol   = collection(db, "tickets");
+      
+      // Hide finalised tickets older than 3 days unless toggled
+      const showHistoric = isAdmin
+        ? document.getElementById('showHistoricFinalisedAdmin').checked
+        : document.getElementById('showHistoricFinalisedPublic').checked;
+const ticketsCol   = collection(db, "tickets");
       const ticketsQuery = query(ticketsCol, orderBy("timestamp","desc"));
 
       try {
@@ -1061,7 +1102,14 @@ if (!decisionText) {
         `;
 
         snapshot.forEach(docSnap => {
-          const data    = docSnap.data();
+          // Skip finalised older than 3 days
+          const data = docSnap.data();
+          const ts = data.timestamp && data.timestamp.toDate ? data.timestamp.toDate() : null;
+          if (data.status === 'Finalised' && ts) {
+            const ageMs = Date.now() - ts.getTime();
+            if (ageMs > 3*24*60*60*1000 && !showHistoric) return;
+          }
+const data    = docSnap.data();
           const tsObj   = data.timestamp && data.timestamp.toDate ? data.timestamp.toDate() : null;
           // Admin filters
 
